# OpenManus

./: .gitignore  Dockerfile  Japan_Travel_Handbook.html  LLM_job_opportunities.txt  README.md  README_zh.md  pyproject.toml
.github/workflows/: build-package.yaml  environment-corrupt-check.yaml  pr-autodiff.yaml  pre-commit.yaml
